fix for the placeholder text not showing

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   padding: 0;
   font-family: 'Koulen', cursive;
 }
+::placeholder{
+  color: grey;
+  opacity: 0.7;
+}
 body{
   background-image: linear-gradient(to left, blue, purple);
   background-size: 100%;
